[package]
name = "async-ssh"
version = "0.1.0"
authors = ["fvkramer <krame490@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.1"
thrussh = "0.19"
tokio-core = "0.1"
tokio-io = "0.1"
thrussh-keys = "0.9"
